--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
-Flask            1.1.2
-Flask-SQLAlchemy 2.4.4
-Flask-WTF        0.14.3
-Flask-Testing    0.8.1
-Jinja2           2.11.2
-MarkupSafe       1.1.1
-SQLAlchemy       1.3.22
-WTForms          2.3.3
-gunicorn         20.0.4
-pytest           6.2.2
-pytest-cov       2.11.1
-PyMySQL          1.0.2
+Flask==1.1.2
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+pkg-resources==0.0.0
+SQLAlchemy==1.3.20
+Werkzeug==1.0.1
+Flask-Testing==0.8.1
+Flask_wtf==0.14.3
+pytest==6.2.2
+pytest-cov==2.11.1
+WTForms==2.3.3
+gunicorn==20.0.4
+PyMySQL==1.0.2
